# musicbrainz_rs

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cog.toml  crates-io.md  sonar-project.properties
.github/workflows/: CI.yaml  Release.yaml
ci/: check_branch.sh
examples/: browse.rs  fetch_artist.rs  fetch_release_coverart.rs  includes.rs  search_artist.rs  set_user_agent.rs
examples/async/: browse.rs  fetch_artist.rs  fetch_release_coverart.rs  includes.rs  search_artist.rs  set_user_agent.rs
examples/blocking/: browse.rs  fetch_release_coverart.rs  includes.rs
src/: browse_deserializer.rs  config.rs  date_format.rs  http_const.rs  lib.rs  model.rs  music_brainz.rs  prelude.rs
src/deserialization/: browse_deserializer.rs  date_format.rs  default.rs  mod.rs  search_deserializer.rs
src/entity/: alias.rs  annotation.rs  area.rs  artist.rs  artist_credit.rs  cdstub.rs  coverart.rs  disc.rs  event.rs  genre.rs  instrument.rs  label.rs  lifespan.rs  mod.rs  place.rs  rating.rs  recording.rs  relations.rs  release.rs  release_group.rs  search.rs  series.rs  tag.rs  url.rs  work.rs
src/model/: alias.rs  area.rs  artist.rs  artist_credit.rs  browse.rs  disc.rs  event.rs  genre.rs  include.rs  include_const.rs  instrument.rs  label.rs  lifespan.rs  mod.rs  place.rs  rating.rs  recording.rs  relations.rs  release.rs  release_group.rs  search.rs  series.rs  tag.rs  url.rs  work.rs
tests/: area_include_tests.rs  area_includes.rs  artist_browse.rs  artist_browse_tests.rs  artist_includes_tests.rs  artist_search.rs  common.rs  config.rs  config_test.rs  event_browse.rs  event_include_test.rs  fetch.rs  includes_tests.rs  instrument_include_tests.rs  instrument_includes.rs  integration_tests.rs  label_browse.rs  label_includes_tests.rs  place_browse.rs  place_include_test.rs  place_includes.rs  recording_includes_tests.rs  release_browse.rs  release_group_browse.rs  release_group_include_tests.rs  release_group_includes.rs  release_include_tests.rs  series_include_tests.rs  tests.rs  work_browse.rs  work_include_tests.rs
tests/annotation/: annotation_search.rs  mod.rs
tests/area/: area_browse.rs  area_includes.rs  area_search.rs  mod.rs
tests/artist/: artist_browse.rs  artist_includes.rs  artist_search.rs
tests/async_tests/annotation/: annotation_search.rs
tests/async_tests/api/: config.rs  fetch.rs  mod.rs
tests/async_tests/area/: area_browse.rs  area_includes.rs  area_search.rs
tests/async_tests/artist/: artist_browse.rs  artist_includes.rs  artist_search.rs  mod.rs
tests/async_tests/cdstub/: cdstub_search.rs  mod.rs
tests/async_tests/event/: event_browse.rs  event_includes.rs  event_search.rs
tests/async_tests/instrument/: instrument_browse.rs  instrument_includes.rs  instrument_search.rs
tests/async_tests/label/: label_browse.rs  label_includes.rs  label_search.rs
tests/async_tests/place/: place_browse.rs  place_includes.rs
tests/async_tests/recording/: recording_browse.rs  recording_includes.rs  recording_search.rs
tests/async_tests/release/: release_browse.rs  release_coverart.rs  release_includes.rs  release_search.rs
tests/async_tests/release_group/: release_group_browse.rs  release_group_coverart.rs  release_group_includes.rs  release_group_search.rs
tests/async_tests/series/: mod.rs  series_browse.rs  series_includes.rs  series_search.rs
tests/async_tests/work/: work_browse.rs  work_includes.rs  work_search.rs
tests/blocking_tests/: mod.rs
tests/blocking_tests/api/: fetch.rs
tests/blocking_tests/area/: area_search.rs
tests/blocking_tests/artist/: artist_includes.rs
tests/blocking_tests/cdstub/: cdstub_search.rs
tests/cdstub/: cdstub_search.rs
tests/event/: event_browse.rs  event_includes.rs  event_search.rs  mod.rs
tests/instrument/: instrument_browse.rs  instrument_includes.rs  instrument_search.rs  mod.rs
tests/label/: label_browse.rs  label_includes.rs  label_search.rs  mod.rs
tests/place/: mod.rs  place_browse.rs  place_includes.rs
tests/recording/: mod.rs  recording_browse.rs  recording_includes.rs  recording_search.rs
tests/release/: mod.rs  release_browse.rs  release_coverart.rs  release_includes.rs  release_search.rs
tests/release_group/: mod.rs  release_group_browse.rs  release_group_coverart.rs  release_group_includes.rs  release_group_search.rs
tests/series/: mod.rs  serie_browse.rs  series_includes.rs  series_search.rs
tests/work/: mod.rs  work_browse.rs  work_includes.rs  work_search.rs
(+19 files in other folders)
