[package]
name = "musicbrainz_rs"
version = "0.2.0"
authors = ["okno <paul.delafosse@protonmail.com>"]
repository = "https://github.com/oknozor/music_brainz_rs"
documentation = "https://docs.rs/musicbrainz_rs"
edition = "2018"
license = "MIT"
readme = "crates-io.md"
description = """
MusicBrainz Rust is a utility crate for the the
MusicBrainz API.
"""

[badges]
travis-ci = { repository = "oknozor/musicbrainz_rs", branch = "master" }

[dependencies]

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
reqwest = "0.9.18"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.3.0"
lucene_query_builder = { path = "../lucene_query_builder_rs" }

[[example]]

name = "fetch_artist"
path = "examples/fetch_artist.rs"

[[example]]

name = "includes"
path = "examples/includes.rs"

[[example]]

name = "browse"
path = "examples/browse.rs"

[[test]]
name = "all"
path = "tests/common.rs"
