[package]
name = "musicbrainz_rs"
version = "0.4.0"
authors = ["okno <paul.delafosse@protonmail.com>"]
repository = "https://github.com/oknozor/music_brainz_rs"
documentation = "https://docs.rs/musicbrainz_rs"
edition = "2018"
license = "MIT"
readme = "crates-io.md"
description = """
MusicBrainz Rust is a utility crate for the the
MusicBrainz API.
"""

[badges]
travis-ci = { repository = "oknozor/musicbrainz_rs", branch = "master" }

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11.11", default-features = false, features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.14.0"
lucene_query_builder = "0.3.0"

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls"]

[[example]]

name = "fetch_artist"
path = "examples/fetch_artist.rs"

[[example]]

name = "includes"
path = "examples/includes.rs"

[[example]]

name = "browse"
path = "examples/browse.rs"

[[example]]

name = "search"
path = "examples/search_artist.rs"

[[test]]
name = "all"
path = "tests/common.rs"
