[package]
name = "musicbrainz_rs"
version = "0.4.0"
authors = ["okno <paul.delafosse@protonmail.com>"]
repository = "https://github.com/oknozor/music_brainz_rs"
documentation = "https://docs.rs/musicbrainz_rs"
edition = "2018"
license = "MIT"
readme = "README.md"
description = """
MusicBrainz Rust is a utility crate for the the
MusicBrainz API.
"""

[badges]
travis-ci = { repository = "oknozor/musicbrainz_rs", branch = "master" }

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1.17"
lucene_query_builder = "0.3"
wasm-timer = { version = "0.2", optional = true }

[dev-dependencies]
tokio = { version = "1.24", features = ["macros", "rt", "rt-multi-thread"]}

[features]
default = ["reqwest/default-tls", "async"]
async = ["wasm-timer"]
rustls = ["reqwest/rustls"]
blocking = ["reqwest/blocking"]

[[example]]
required-features = ["blocking"]
name = "fetch_artist"
path = "examples/blocking/fetch_artist.rs"

[[example]]
required-features = ["blocking"]
name = "includes"
path = "examples/blocking/includes.rs"

[[example]]
required-features = ["blocking"]
name = "browse"
path = "examples/blocking/browse.rs"

[[example]]
required-features = ["blocking"]
name = "search"
path = "examples/blocking/search_artist.rs"

[[example]]
required-features = ["blocking"]
name = "fetch_release_coverart"
path = "examples/blocking/fetch_release_coverart.rs"

[[example]]
required-features = ["blocking"]
name = "set_user_agent"
path = "examples/blocking/set_user_agent.rs"

[[example]]
required-features = ["async"]
name = "fetch_artist_async"
path = "examples/async/fetch_artist.rs"

[[example]]
required-features = ["async"]
name = "includes_async"
path = "examples/async/includes.rs"

[[example]]
required-features = ["async"]
name = "browse_async"
path = "examples/async/browse.rs"

[[example]]
required-features = ["async"]
name = "search_async"
path = "examples/async/search_artist.rs"

[[example]]
required-features = ["async"]
name = "fetch_release_coverart_async"
path = "examples/async/fetch_release_coverart.rs"

[[example]]
required-features = ["async"]
name = "set_user_agent_async"
path = "examples/async/set_user_agent.rs"

[[test]]
name = "all"
path = "tests/tests.rs"
